# sbom-scanner

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  sbom.config.yaml
.github/workflows/: docker.yml  pypi.yml  test.yml
docs/adr/: 001-multi-sbom-format-support.md
src/sbom_scanner/: __init__.py  cli.py  configure.py  generate_sbom.py  generate_sbom_report.py  i18n.py  report_data.py
src/sbom_scanner/ecosystems/: __init__.py  base.py  cargo.py  maven.py  npm.py  nuget.py  pub.py  pypi.py
src/sbom_scanner/locales/de/LC_MESSAGES/: sbom_scanner.mo  sbom_scanner.po
src/sbom_scanner/renderers/: __init__.py  base.py  csv_report.py  html.py  json_report.py  pdf.py  simple_html.py
src/sbom_scanner/scanners/: __init__.py  base.py  grype.py  osv.py
tests/: conftest.py  test_cli.py  test_ecosystems.py  test_renderers.py  test_report_data.py
