[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sbom-scanner"
dynamic = ["version"]
description = "Multi-ecosystem CycloneDX 1.6 SBOM scanner with HTML report and CVE scanning"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
pdf = ["weasyprint"]
python = ["pipdeptree"]
tui = ["rich", "InquirerPy"]
all = ["pyyaml", "pipdeptree", "rich", "InquirerPy"]

[project.scripts]
sbom = "sbom_scanner.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/sbom_scanner/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sbom_scanner"]
