[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sbom-scanner"
dynamic = ["version"]
description = "Multi-ecosystem CycloneDX 1.6 SBOM scanner with HTML report and CVE scanning"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = [
    "sbom", "cyclonedx", "software-bill-of-materials",
    "dependency-scanner", "vulnerability-scanner", "security",
    "supply-chain-security", "license-compliance",
    "npm", "yarn", "pypi", "python", "pip",
    "cargo", "rust", "crates",
    "gradle", "maven", "java", "kotlin", "android",
    "nuget", "dotnet", "csharp",
    "dart", "flutter", "pub",
    "cve", "grype", "osv", "osv-scanner",
    "html-report", "dependency-tree", "pdf-report",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Software Distribution",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
pdf = ["weasyprint"]
python = ["pipdeptree"]
tui = ["rich", "InquirerPy"]
all = ["pyyaml", "pipdeptree", "rich", "InquirerPy"]
dev = ["pytest"]

[project.scripts]
sbom = "sbom_scanner.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/sbom_scanner/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sbom_scanner"]
